# rs-stellar-archivist

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml  socket-scan.yml
docs/: architecture.md
src/: history_archive.rs  history_file.rs  history_format.rs  lib.rs  main.rs  metrics.rs  mirror_operation.rs  pipeline.rs  repair_operation.rs  report.rs  retryable_error_layer.rs  scan_operation.rs  storage.rs  utils.rs  verify.rs  xdr_verify.rs
src/cli/: mirror.rs  mod.rs  repair.rs  scan.rs
src/tests/: cli_validation_test.rs  history_format.rs  http_retry_test.rs  http_server_test.rs  mirror_edge_cases_test.rs  mirror_op_test.rs  mirror_verification_test.rs  mod.rs  path_normalization_test.rs  pipeline_test.rs  pubnet_scp_gap_test.rs  repair_op_test.rs  report_test.rs  scan_op_test.rs  scan_operation.rs  utils.rs  verify_test.rs  xdr_verification_e2e_test.rs  xdr_verify_test.rs
testdata/canonical-formats/: history-archive-state-v1.json  history-archive-state-v2.json
testdata/pubnet-archive-old-txset/.well-known/: stellar-history.json
testdata/pubnet-archive-old-txset/history/00/b7/1a/: history-00b71aff.json
testdata/pubnet-archive-old-txset/history/00/b7/1b/: history-00b71b3f.json  history-00b71b7f.json  history-00b71bbf.json  history-00b71bff.json
testdata/pubnet-archive-old-txset/history/00/b7/1c/: history-00b71c3f.json  history-00b71c7f.json  history-00b71cbf.json  history-00b71cff.json
testdata/pubnet-archive-old-txset/history/00/b7/1d/: history-00b71d3f.json  history-00b71d7f.json  history-00b71dbf.json  history-00b71dff.json
testdata/pubnet-archive-old-txset/history/00/b7/1e/: history-00b71e3f.json  history-00b71e7f.json  history-00b71ebf.json
testdata/pubnet-archive-scp-boundary/.well-known/: stellar-history.json
testdata/pubnet-archive-scp-boundary/history/00/12/85/: history-0012857f.json  history-001285bf.json  history-001285ff.json
testdata/pubnet-archive-scp-boundary/history/00/12/86/: history-0012863f.json  history-0012867f.json  history-001286bf.json  history-001286ff.json
testdata/pubnet-archive-scp-boundary/history/00/12/87/: history-0012873f.json
testdata/testnet-archive-small/history/00/00/00/: history-0000003f.json  history-0000007f.json  history-000000bf.json  history-000000ff.json
testdata/testnet-archive-small/history/00/00/01/: history-0000013f.json  history-0000017f.json  history-000001bf.json  history-000001ff.json
testdata/testnet-archive-small/history/00/00/02/: history-0000023f.json  history-0000027f.json  history-000002bf.json  history-000002ff.json
testdata/testnet-archive-small/history/00/00/03/: history-0000033f.json  history-0000037f.json  history-000003bf.json  history-000003ff.json
testdata/testnet-archive-small/history/00/00/04/: history-0000043f.json  history-0000047f.json  history-000004bf.json  history-000004ff.json
testdata/testnet-archive-small/history/00/00/05/: history-0000053f.json  history-0000057f.json  history-000005bf.json  history-000005ff.json
testdata/testnet-archive-small/history/00/00/06/: history-0000063f.json  history-0000067f.json  history-000006bf.json  history-000006ff.json
testdata/testnet-archive-small/history/00/00/07/: history-0000073f.json  history-0000077f.json  history-000007bf.json  history-000007ff.json
testdata/testnet-archive-small/history/00/00/08/: history-0000083f.json  history-0000087f.json  history-000008bf.json  history-000008ff.json
testdata/testnet-archive-small/history/00/00/09/: history-0000093f.json  history-0000097f.json  history-000009bf.json  history-000009ff.json
testdata/testnet-archive-small/history/00/00/0a/: history-00000a3f.json  history-00000a7f.json  history-00000abf.json  history-00000aff.json
testdata/testnet-archive-small/history/00/00/0b/: history-00000b3f.json  history-00000b7f.json  history-00000bbf.json  history-00000bff.json
testdata/testnet-archive-small/history/00/00/0c/: history-00000c3f.json  history-00000c7f.json  history-00000cbf.json  history-00000cff.json
testdata/testnet-archive-small/history/00/00/0d/: history-00000d3f.json  history-00000d7f.json  history-00000dbf.json  history-00000dff.json
testdata/testnet-archive-small/history/00/00/0e/: history-00000e3f.json  history-00000e7f.json  history-00000ebf.json  history-00000eff.json
testdata/testnet-archive-small/history/00/00/0f/: history-00000f3f.json  history-00000f7f.json  history-00000fbf.json  history-00000fff.json
testdata/testnet-archive-small/history/00/00/10/: history-0000103f.json  history-0000107f.json  history-000010bf.json  history-000010ff.json
testdata/testnet-archive-small/history/00/00/11/: history-0000113f.json  history-0000117f.json  history-000011bf.json  history-000011ff.json
testdata/testnet-archive-small/history/00/00/12/: history-0000123f.json  history-0000127f.json  history-000012bf.json  history-000012ff.json
testdata/testnet-archive-small/history/00/00/13/: history-0000133f.json  history-0000137f.json  history-000013bf.json  history-000013ff.json
testdata/testnet-archive-small/history/00/00/14/: history-0000143f.json  history-0000147f.json  history-000014bf.json  history-000014ff.json
testdata/testnet-archive-small/history/00/00/15/: history-0000153f.json  history-0000157f.json  history-000015bf.json  history-000015ff.json
tests/: cli_validation_test.rs  history_archive.rs  history_file.rs  http_retry_test.rs  http_server_test.rs  mirror_edge_cases_test.rs  mirror_verification_test.rs  scan_operation.rs
(+69 files in other folders)
