[package]
name = "stellar-archivist"
description = "Stellar History Archive tools and utilities."
homepage = "https://github.com/stellar/rs-stellar-archivist"
repository = "https://github.com/stellar/rs-stellar-archivist"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

[lib]
name = "stellar_archivist"

[features]
default = ["cli", "opendal-all"]
cli = ["dep:clap", "dep:tracing-subscriber"]

# OpenDAL-based cloud storage backends
opendal-s3 = ["dep:opendal", "opendal?/services-s3"]
opendal-gcs = ["dep:opendal", "opendal?/services-gcs"]
opendal-azblob = ["dep:opendal", "opendal?/services-azblob"]
opendal-b2 = ["dep:opendal", "opendal?/services-b2"]
opendal-sftp = ["dep:opendal", "opendal?/services-sftp"]
opendal-swift = ["dep:opendal", "opendal?/services-swift"]

# Convenience feature to enable all cloud storage backends
opendal-all = ["opendal-s3", "opendal-gcs", "opendal-azblob", "opendal-b2", "opendal-sftp", "opendal-swift"]

[[bin]]
name = "stellar-archivist"
path = "src/bin/stellar-archivist/main.rs"
required-features = ["cli"]
doctest = false

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.89" }
clap = { version = "4.0", features = ["derive"], optional = true }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"], optional = true }
futures-util = { version = "0.3" }
url = { version = "2.5" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",        # TLS backend (force rustls, no native-tls)
    "http2",             # Enable HTTP/2 support
    "stream",            # Streaming responses
] }
tokio-util = { version = "0.7.16", features = ["compat", "io"] }
lru = { version = "0.12" }
opendal = { version = "0.55", default-features = false, optional = true }
futures-io = { version = "0.3" }

[dev-dependencies]
tempfile = { version = "3.5.0" }
rand = { version = "0.8" }
rstest = { version = "0.18.2" }
axum = { version = "0.7" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["fs"] }
walkdir = { version = "2" }
wiremock = { version = "0.6" }